feat: :sparkles: se realiza pagina web proyecto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header >
         <section id="Head">
-        <section class="logo">
+        <section id="Logo" class="logo">
         <a href="#home"><h2>CARMENTEA</h2></a>
         <p>Leña, Carbon y Corazon</p>
         </section>
@@ -26,7 +26,9 @@
             <input type="checkbox" id="Cambio-de-menu">
             <label for="Cambio-de-menu">☰</label>
         <footer>
-            <button id="reservas">Reservas</button>
+            <button id="reservas" onclick="window.location.href='https://api.whatsapp.com/send?phone=573124013599&text=Hola+Llanera+Carmentea%2C+quisiera+hacer+una+reserva'">
+                Reservar
+            </button>
         </footer>
         </section>
     </section>
@@ -120,6 +122,7 @@
                         </ul>
                         </div>
                         <ul class="contacto"><h1>Contacto</h1>
+                            <a href="https://api.whatsapp.com/send?phone=573124013599&text=Hola+Llanera+Carmentea%2C+quisiera+ver+el+men%C3%BA+y+hacer+mi+pedido" target="_blank" id="contact-whatsapp">whatsapp</a>
                             <li>  +57 3124013599</li>
                             <li>  +57 3052288509</li>
                             <li>  carmenteaadmin@gmail.com</li>
